--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="css_files/main.css">
   <title>Immigration 101</title>
+
 </head>
 <body>
-<section>
-<h1>Title</h1>
-</section>
 
+<ul class="nav-bar">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
+
+
+<section>
+<h1>Please show up</h1>
+
+
+<p> Heyo </p>
+
+</section>
 
 </body>
 </html>
