--- a/index.html
+++ b/index.html
@@ -8,22 +8,20 @@
 
 </head>
 <body>
-
-<ul class="nav-bar">
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
-
-
-
+<nav>
+  <ul class="nav-bar">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
+</nav>
 <section>
-<h1>Please show up</h1>
+  <h1>Please show up</h1>
 
 
-<p> Heyo </p>
-<p> edits!!</p>
+  <p> Heyo </p>
+  <p> edits!!</p>
 
 </section>
 
