--- a/resources.html
+++ b/resources.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="8">
+
     <link rel="stylesheet" type="text/css" href="css_files/main.css">
     <link rel="stylesheet" type="text/css" href="css_files/resources.css">
     <title>Immigration</title>
@@ -9,7 +10,44 @@
   <body>
     <nav>
     </nav>
+    <h1>Additional Resources</h1>
+    <article class="intro">
+      <p>Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
+      <p>Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
+    </article>
+    <!--info on detention centers-->
+    <article class="detention"></article>
 
+    <!--undocu info-->
+    <article class="undocu-info">
+      <h3>How to Support Undocumented Individuals</h3>
+      <p class="paragraph">If you want to advocate for undocumented individuals, advocate for everyone! Not just those with DACA, not just those who can “contribute to the economy,” everyone is worthy and has a right to a life. A lot of undocumented people are in this country because it is difficult to make a living in their home country, no one is interested in stealing your job or resources.
+      </p>
+      <p class="paragraph">Often times undocumented indivduals are exploited and paid under the table unlivable wages. Put pressure on officials to end unethical business practices. Under the current system, undocumented workers have very little rights, never ask someone about their status as that can put them in danger. If you know of or see any ICE raids, warn your neighbors, this can mean the difference between life and death. Remember, no one has to prove their worth to be treated as a human</p>
+      <p class="paragraph">Never speak for anyone. Undocumented individuals are not “voiceless” you don’t need to be the “voice of the voiceless.” They’re real people, with real feelings, and their own voices. Instead, we should uplift them and not assume what their goals are.</p>
+      <section class="daca-update">
+        <h4>DACA Update</h4>
+        <p class="paragraph">As of <b>July 28th, 2020</b> DHS is:</p>
+        <ul class="dhs-update">
+          <li>Not accepting new DACA applications. Those who qualify but were too young to apply when the Trump Administration ended the program in 2016, are still not eligible to apply</li>
+          <li>Shortening the deffered action period from two years to one year. This means, DACA recipients have to reapply and pay the <b>$495 fee every year</b>. </li>
+          <li>Rejecting Advanced Parole applications, except in extenuating situations. DACA recipients can't leave the country for any reason, unless DHS deems their excuse as "extenuating" at their own discretion.</li>
+        </ul>
+        <p>Information summary from:<a href="https://twitter.com/Nimalo_Nisanto/status/1288188091560153088?s=20">@Nimalo_Nisanto</a> via Twitter.</p>
+        <p>You can read the full <a href="https://www.dhs.gov/sites/default/files/publications/20_0728_s1_daca-reconsideration-memo.pdf">DHS document here.</a></p>
+      </section>
+      <section class="daca-resources">
+        <h4>Links to Help Raise funds for DACA Application</h4>
+        <ul class="daca-links">
+          <li>Buy from<a href="https://adelitasapparel.com/collections/daca-renewal-fund">Adelita's Apparel</a>, they donate funds for certain items directly to DACA renewals</li>
+          <li>Donate to <a href="https://www.raicestexas.org/ways-to-give/donate/">Raices Texas</a>, they fund DACA renweals in Texas, among other services for immigrants.</li>
+        </ul>
+      </section>
+    </article>
+
+
+    <!--info on refugees and asylees-->
+    <article class="asylum-info"></article>
     <footer>
     </footer>
   </body>
