--- a/resources.html
+++ b/resources.html
@@ -29,25 +29,108 @@
         <h4>DACA Update</h4>
         <p class="paragraph">As of <b>July 28th, 2020</b> DHS is:</p>
         <ul class="dhs-update">
-          <li>Not accepting new DACA applications. Those who qualify but were too young to apply when the Trump Administration ended the program in 2016, are still not eligible to apply</li>
-          <li>Shortening the deffered action period from two years to one year. This means, DACA recipients have to reapply and pay the <b>$495 fee every year</b>. </li>
-          <li>Rejecting Advanced Parole applications, except in extenuating situations. DACA recipients can't leave the country for any reason, unless DHS deems their excuse as "extenuating" at their own discretion.</li>
+          <li class="paragraph">Not accepting new DACA applications. Those who qualify but were too young to apply when the Trump Administration ended the program in 2016, are still not eligible to apply</li>
+          <li class="paragraph">Shortening the deffered action period from two years to one year. This means, DACA recipients have to reapply and pay the <b>$495 fee every year</b>. </li>
+          <li class="paragraph">Rejecting Advanced Parole applications, except in extenuating situations. DACA recipients can't leave the country for any reason, unless DHS deems their excuse as "extenuating" at their own discretion.</li>
         </ul>
-        <p>Information summary from:<a href="https://twitter.com/Nimalo_Nisanto/status/1288188091560153088?s=20">@Nimalo_Nisanto</a> via Twitter.</p>
+        <p>Information summary from: <a href="https://twitter.com/Nimalo_Nisanto/status/1288188091560153088?s=20">@Nimalo_Nisanto</a> via Twitter.</p>
         <p>You can read the full <a href="https://www.dhs.gov/sites/default/files/publications/20_0728_s1_daca-reconsideration-memo.pdf">DHS document here.</a></p>
       </section>
       <section class="daca-resources">
         <h4>Links to Help Raise funds for DACA Application</h4>
         <ul class="daca-links">
-          <li>Buy from<a href="https://adelitasapparel.com/collections/daca-renewal-fund">Adelita's Apparel</a>, they donate funds for certain items directly to DACA renewals</li>
+          <li>Buy from <a href="https://adelitasapparel.com/collections/daca-renewal-fund">Adelita's Apparel</a>, they donate funds for certain items directly to DACA renewals</li>
           <li>Donate to <a href="https://www.raicestexas.org/ways-to-give/donate/">Raices Texas</a>, they fund DACA renweals in Texas, among other services for immigrants.</li>
         </ul>
       </section>
     </article>
 
-
     <!--info on refugees and asylees-->
-    <article class="asylum-info"></article>
+    <article class="asylum-info">
+      <h3>Asylees and Refugees</h3>
+      <h4>Asylees</h4>
+      <section class="asylees">
+        <p class="paragraph">As of March 20, 2020 the United States is denying access to asylum seekers, and are returning them to their country of origin or the Mexican border, including unaccompanied children. If an unaccompanied child is suspected to be ill, be a victim of human trafficking or returning them is not feasible for some reason, then they undergo the standard processing procedure (immigration forum). </p>
+        <p class="paragraph">An asylee is any person who meets the international criteria of a refugee. Anyone who has a “well-founded fear” of persecution due to race, religion, nationality, political opinion, or membership of a specific social group and is forced to flee their country (including instances of war and violence) is deemed an asylee. <b>>A refugee is different from an asylee as they apply for protection from outside the country.</b> There are two types of asylum processes:
+        </p>
+        <ul class="asylum-processes">
+          <li class="paragraph">Affirmative asylum process - An asylum seeker has up to one year after arriving in the U.S to apply for asylum. They can also apply at ports of entry, where a USCIS officer decides to accept or deny them. If the individual is denied after their visa is expired or at a port of entry without a visa, they can go through the defensive asylum process.</li>
+          <li>Defensive asylum process - Individuals have the option to take this process if they receive a removal order (deportation) or are denied at a port of entry. In this process, the individual goes to immigration court, where a judge decides to grant or deny them asylum.</li>
+        </ul>
+      </section>
+      <blockquote cite="https://www.migrationpolicy.org/article/refugees-and-asylees-united-states-2018">"Once granted U.S. protection, refugees and asylees are authorized to work. They may also qualify for assistance, including cash, medical, housing, educational, and vocational services, to facilitate their economic and social integration."
+        <a class="citation" href="https://www.migrationpolicy.org/article/refugees-and-asylees-united-states-2018"> Migration Policy Institute</a>
+      </blockquote>
+
+
+      <section class="refugee-info">
+        <h4>Refugees</h4>
+        <p class="paragraph">There is not much of a difference between a refugee and an asylee besides legal procedures. By definition, a refugee is someone who applies for legal protection from outside the United States instead of within.</p>
+        <p class="paragraph">In contrast to asylum seekers, which do not have a legal cap, the president sets the ceiling for the number of refugees admitted. In 2020 Trump lowered it to 18,000 refugees. The process can take on average from 18 to 24 months. </p>
+        <h4>Organizations that Support Asylees and Refugees in NC</h4>
+        <ul class="nc-orgs">
+          <li><a href="https://ascafrica.org/">https://ascafrica.org/</a></li>
+          <li><a href="https://carolinarefugee.org/">https://carolinarefugee.org/</a></li>
+        </ul>
+      </section>
+      <section class="add-sources">
+        <h4>Sources:</h4>
+        <ul>
+          <li><a href="https://immigrationforum.org/article/fact-sheet-u-s-asylum-process/">Fact Sheet: U.S. Asylum Process</a></li>
+          <li><a href="https://www.migrationpolicy.org/article/refugees-and-asylees-united-states-2018">Refugees and Asylees in the United States in 2018</a></li>
+          <li><a href="https://www.alllaw.com/articles/nolo/us-immigration/how-many-people-can-get-asylum.html#:~:text=In%20the%20past%2C%20the%20annual,2020%20of%2030%2C000%20refugee%20admissions.">How Many People Can Get U.S. Asylum?</a></li>
+        </ul>
+      </section>
+    </article>
+
+    <!--poverty among immigrants-->
+    <article class="poverty-info">
+      <h3>Immigrants and the Poverty Line</h3>
+      <p class="paragraph">15% of immigrants in the United States fall below the poverty threshold, in comparison to 13%. Many immigrants who come to the United States open their own businesses. One of the easiest ways to support immigrants is by purchasing from their businesses. We’ve also seen a trend during the past couple of years, where street vendors are questioned about having vendor licenses, and are sometimes attacked. If you see a street vendor being harassed do what you can to help. Don’t attempt to haggle with any small business owners/businesses, their labor is worthy of paying the full price!
+      </p>
+      <p class="paragraph">Contact your local and state officials and put pressure on them to raise the minimum wage to a living wage. Many immigrants are working for unlivable wages, put pressure on your officials to pass legislation to combat that.</p>
+      <p class="paragraph">If you are able, help out with mutual aid. Giving money directly to individuals is often more helpful than donating through large organizations, since it’s not always guaranteed the individuals they claim to help will see that aid. </p>
+      <section class="add-sources">
+        <h4>Sources:</h4>
+        <ul>
+          <li><a href="https://www.migrationpolicy.org/article/frequently-requested-statistics-immigrants-and-immigration-united-states">Frequently Requested Statistics on Immigrants and Immigration in the United States</a></li>
+        </ul>
+      </section>
+    </article>
+
+    <!--indigenous people at the border-->
+    <article class="desecration-info">
+      <h3>How to Support Indigenous People at the Border</h3>
+      <p class="paragraph">Although indigenous people are not immigrants, the crisis at the border impacts them greatly. Due to the construction of the border wall, various sacred sites of the O’odham Nation of Arizona have been desecrated. You can support the O’odham Nation by:</p>
+      <ul class="border-info">
+        <li>Calling DHS at (202) 224-3121 and tell them to cease construction</li>
+        <li>Calling your Congress member at (202) 224-3121 to hold DHS accountable
+        </li>
+        <li>Call the White House at (202) 456-1414</li>
+      </ul>
+      <section class="add-sources">
+        <h4>Sources:</h4>
+        <ul>
+          <li><a href="https://www.indian-affairs.org/sacred-sites-at-the-border.html">Sacred Sites at the Border:
+            Organ Pipe Cactus National Monument</a></li>
+        </ul>
+      </section>
+    </article>
+
+    <!--Organizations to support-->
+    <article class="orgs">
+      <h3>Organizations to Support</h3>
+      <ul class="img-orgs">
+        <li><a href="https://www.nysylc.org/">New York</a></li>
+        <li><a href="https://ciyja.org/">California</a></li>
+        <li><a href="https://www.icirr.org/">Illinois</a></li>
+        <li><a href="https://carolinarefugee.org//">NC - Charlotte</a></li>
+        <li><a href="https://ascafrica.org/">NC - Guilford County</a></li>
+        <li><a href="https://www.raicestexas.org/ways-to-give/donate/">Texas</a></li>
+        <li><a href="https://www.neveragainaction.com/">National</a></li>
+        <p class="paragraph">Make sure you research before donating, organizations like United We Dream have a history of not disclosing where donations and funds are going.</p>
+      </ul>
+    </article>
     <footer>
     </footer>
   </body>
