--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 <body>
 <nav>
   <ul class="nav-bar">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="quiz.html">Take The Quiz</a></li>
+    <li><a href="resources.html">Additional Resources</a></li>
   </ul>
 </nav>
 <section>
   <h1>Please show up</h1>
 
+  <h2>Here is our Mission statement</h2>
 
-  <p> Heyo </p>
-  <p> edits!!</p>
+  <div>This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
+
+
 
 </section>
 
