--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,9 @@
       <p>Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
     </article>
     <!--info on detention centers-->
-    <article class="detention"></article>
+    <article class="detention">
+      <h3>Detention Centers</h3>
+    </article>
 
     <!--undocu info-->
     <article class="undocu-info">
@@ -84,6 +86,7 @@
     </article>
 
     <!--poverty among immigrants-->
+    <!--add something about medical access-->
     <article class="poverty-info">
       <h3>Immigrants and the Poverty Line</h3>
       <p class="paragraph">15% of immigrants in the United States fall below the poverty threshold, in comparison to 13%. Many immigrants who come to the United States open their own businesses. One of the easiest ways to support immigrants is by purchasing from their businesses. We’ve also seen a trend during the past couple of years, where street vendors are questioned about having vendor licenses, and are sometimes attacked. If you see a street vendor being harassed do what you can to help. Don’t attempt to haggle with any small business owners/businesses, their labor is worthy of paying the full price!
