--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,7 @@
 <h1>Title</h1>
 </section>
 
-<div id="quiz"></div>
-<button id="submit">Enter</button>
-<div id="results"></div>
-
+<script src="questions.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
