--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Immigration 101</title>
 </head>
 <body>
@@ -11,7 +12,76 @@
 <h1>Title</h1>
 </section>
 
-<script src="questions.js"></script>
-<script src="index.js"></script>
+<div class="row">
+  <div class="col-md">
+      <div class="score"></div>
+      <div class="content"></div>
+  </div>
+  <div class="col-md">
+      <div class="points"></div>
+  </div>
+</div>
+
+<div class="q_one">
+<p>It is much larger than 20%; 46 percent of immigrants reported their race as single-race White, 27 percent as Asian, 10 percent as Black, and 15 percent as some other race. About 2 percent reported having two or more races.</p>
+</div>
+
+<div class="q_two">
+<p>DACA does not provide a path to citizenship for recipients. It’s very difficult for DACA recipients to become citizens actually because most are not eligible for a green card and a in order to become a citizen, one must first have a green card for 5 years. The primary way to get a green card is by something called Family Reunification which means an immediate relative or spouse who is a citizen must sponsor you and most people with DACA do not have that. </p>
+</div>
+
+<div class="q_three">
+  <p>This is true. The wall is also being built over sacred sites in Arizona and cutting through native land. </p>
+</div>
+
+<div class="q_four">
+  <p>From 1982 - 2017, the United States led the world in admitting refugees. However, Trump lowered the refugee ceiling down to 45,000 in 2017, but only admitted 22,500.
+    For comparison,from January 2017 to September 2019 admitted 76,200. In 2016 alone, 85,500 refugees were admitted into the United States
+    </p>
+</div>
+
+<div class="q_five">
+  <p>Nope nope my bro: let's not base human life on their economic worth. This would be agreeing that people are only worth as much money they can make.</p>
+</div>
+
+<div class="q_six">
+  <p>-Although the jury is still out for Trump, Obama deported somewhere around 2.8 &mdash; 3.4 million people during his presidency.
+    Although there is conflicting information on the DHS and ICE websites, in their first three years of presidency, Obama deported about 400,000 more than Trump.
+   </p>
+</div>
+
+<div class="q_seven">
+  <p>15% percent of immigrants were poor (as defined, family incomes below the official poverty threshold), compared to 13% of the U.S.-born population.</p>
+</div>
+
+<div class="q_eight">
+  <p>The Department of Homeland Security was signed into law by President George W. Bush on November 25, 2002.
+    ICE was established in March of 2003.
+    The first step towards helping immigrants is to recognize that not all the current institutions have been around for a long time. Although the United States has a history of xenophobia, we need to stop normalizing the establishment of these new institutions, along with the long-standing ones.
+    </p>
+</div>
+
+<div class="q_nine">
+  <p>As of July 28, 2020, ICE is reporting 3,835 cases of COVID-19 in facilities holding immigrants around the country. </p>
+
+</div>
+
+<div class="q_ten">
+  <p>Many of the U.S. Hispanics are native born. Of the 59.8 million people in 2018 who self-identified as Hispanic or Latino, 33 percent (19.8 million) were immigrants and 67 percent (40 million) were native born.</p>
+</div>
+
+<div class="q_eleven">
+  <p>To become a citizen, immigrants must first become a permanent resident (AKA green card holder) which is already very hard to get and can take a lot of time. Only after living in the US for five consecutive years as a green card holder may they apply for naturalization, which is the process of becoming a citizen. They must be 18 or older, be able to read, write, and speak basic English, understand the US constitution, have knowledge of the US history and government, and take the oath of allegiance to the US. Also to apply for naturalization they must pay a free of $725. This process can last 6-14 months. They must then complete an interview and test. The overall process is very very long and costly.</p>
+</div>
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js_files/questions.js"></script>
+<script src="js_files/script.js"></script>
 </body>
 </html>
