--- a/resources.html
+++ b/resources.html
@@ -17,7 +17,18 @@
     </article>
     <!--info on detention centers-->
     <article class="detention">
-      <h3>Detention Centers</h3>
+      <h3>covid-19 in Detention Centers</h3>
+      <p class="paragraph">DHS runs the largest immigration detention system in the world, unsurprisingly there’s numerous reports of unsanitary conditions, which are heightened by the Covid-19 pandemic. As of July 29th at 9:30 AM, ICE is reporting 3,917 Covid-19 cases in detention centers, out of a total detained population of 22,067. That means 17% of detainees have contracted Covid-19.
+      </p>
+      <p class="paragraph">In letters to clergy, lawyers, volunteers, and family, detainees have described the horrible conditions, fear of Covid, and abuse from the guards. Covid is not just spread by detainees, but the guards as well. There’s also reports of lacking medical attention, cleaning supplies, and unsanitary practices of reusing equipment by the guards.
+      </p>
+      <blockquote src="https://theintercept.com/2020/07/27/ice-detention-coronavirus-letters/">“The fact that we are migrants doesn’t give them the right to treat us like criminals. … I’ve been detained for five months in this center with my lung condition and problems with my liver. Do you think that proper nutrition for a sick person is bread and ham every day?” </blockquote>
+      <section class="dc-help">
+        <ul class="dc-support">
+          <li>Send sanitary supplies to dentetion centers: masks, soap, hand sanitizer, etc.,</li>
+          <li>Contact your officials</li>
+        </ul>
+      </section>
     </article>
 
     <!--undocu info-->
