--- a/resources.html
+++ b/resources.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="8">
-
-    <link rel="stylesheet" type="text/css" href="css_files/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Open+Sans&family=Recursive&display=swap" rel="stylesheet">    <link rel="stylesheet" type="text/css" href="css_files/main.css">
     <link rel="stylesheet" type="text/css" href="css_files/resources.css">
-    <title>Immigration</title>
+    <title>Additional Resources</title>
   </head>
   <body>
     <nav>
+      <ul class="nav-bar">
+        <li class="logo"><a href="index.html">ExodusCrisis</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quiz.html">Take The Quiz</a></li>
+        <li><a href="resources.html">Additional Resources</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
+    <div class="container">
     <h1>Additional Resources</h1>
     <article class="intro">
-      <p>Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
-      <p>Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
+      <h5>Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </h5>
+      <h4>Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</h4>
     </article>
     <!--info on detention centers-->
     <article class="detention">
@@ -22,7 +31,7 @@
       </p>
       <p class="paragraph">In letters to clergy, lawyers, volunteers, and family, detainees have described the horrible conditions, fear of Covid, and abuse from the guards. Covid is not just spread by detainees, but the guards as well. There’s also reports of lacking medical attention, cleaning supplies, and unsanitary practices of reusing equipment by the guards.
       </p>
-      <blockquote src="https://theintercept.com/2020/07/27/ice-detention-coronavirus-letters/">“The fact that we are migrants doesn’t give them the right to treat us like criminals. … I’ve been detained for five months in this center with my lung condition and problems with my liver. Do you think that proper nutrition for a sick person is bread and ham every day?” </blockquote>
+      <blockquote cite="https://theintercept.com/2020/07/27/ice-detention-coronavirus-letters/">“The fact that we are migrants doesn’t give them the right to treat us like criminals. … I’ve been detained for five months in this center with my lung condition and problems with my liver. Do you think that proper nutrition for a sick person is bread and ham every day?” </blockquote>
       <section class="dc-help">
         <h4>How to Help:</h4>
         <ul class="dc-support">
@@ -74,8 +83,8 @@
     <!--info on refugees and asylees-->
     <article class="asylum-info">
       <h3>Asylees and Refugees</h3>
-      <h4>Asylees</h4>
       <section class="asylees">
+        <h4>Asylees</h4>
         <p class="paragraph">As of March 20, 2020 the United States is denying access to asylum seekers, and are returning them to their country of origin or the Mexican border, including unaccompanied children. If an unaccompanied child is suspected to be ill, be a victim of human trafficking or returning them is not feasible for some reason, then they undergo the standard processing procedure (immigration forum). </p>
         <p class="paragraph">An asylee is any person who meets the international criteria of a refugee. Anyone who has a “well-founded fear” of persecution due to race, religion, nationality, political opinion, or membership of a specific social group and is forced to flee their country (including instances of war and violence) is deemed an asylee. <b>>A refugee is different from an asylee as they apply for protection from outside the country.</b> There are two types of asylum processes:
         </p>
@@ -155,9 +164,10 @@
         <li><a href="https://ascafrica.org/">NC - Guilford County</a></li>
         <li><a href="https://www.raicestexas.org/ways-to-give/donate/">Texas</a></li>
         <li><a href="https://www.neveragainaction.com/">National</a></li>
-        <p class="paragraph">Make sure you research before donating, organizations like United We Dream have a history of not disclosing where donations and funds are going.</p>
       </ul>
+      <p class="paragraph">Make sure you research before donating, organizations like United We Dream have a history of not disclosing where donations and funds are going.</p>
     </article>
+    </div>
     <footer>
     </footer>
   </body>
