--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css_files/main.css">
-  <title>Immigration 101</title>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Open+Sans&family=Recursive&display=swap" rel="stylesheet">
+  <title>ExodusCrisis</title>
 
 </head>
 <body>
 <nav>
   <ul class="nav-bar">
+    <li class="logo"><a href="index.html">ExodusCrisis</a></li>
     <li><a href="index.html">Home</a></li>
     <li><a href="quiz.html">Take The Quiz</a></li>
     <li><a href="resources.html">Additional Resources</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
   </ul>
 </nav>
-<section>
-  <h1>Please show up</h1>
+<div class="container">
+  <section>
 
-  <h2>Here is our Mission statement</h2>
+    <h2>Mission Statement</h2>
 
-  <div>This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
+    <div class="msn">This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
 
-  <p class="button">
-    <a class="btn btn-primary btn-lg" href="quiz.html" role="button">Take the Quiz</a>
-  </p>
+    <p class="button">
+      <a class="btn btn-primary btn-lg" href="quiz.html" role="button">Take the Quiz</a>
+    </p>
 
-</section>
+  </section>
+</div>
 
 </body>
 </html>
