--- a/quiz.html
+++ b/quiz.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Open+Sans&family=Recursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <title>Immigration 101</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css_files/main.css">
+  <title>Quiz</title>
 </head>
 <body>
+  <nav>
+    <ul class="nav-bar">
+      <li class="logo"><a href="index.html">ExodusCrisis</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="quiz.html">Take The Quiz</a></li>
+      <li><a href="resources.html">Additional Resources</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+  </nav>
+  <div class="container">
+    <section>
+    <h1 id="title1">Title</h1>
+    </section>
 
-<section>
-<h1 id="title1">Title</h1>
-</section>
-
-<div class="row">
-  <div class="col-md">
-      <div class="score"></div>
-      <div class="content"></div>
-  </div>
-  <div class="col-md">
-      <div class="points"></div>
-  </div>
+    <div class="row">
+      <div class="col-md">
+          <div class="score"></div>
+          <div class="content"></div>
+      </div>
+      <div class="col-md">
+          <div class="points"></div>
+      </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
