website them implemented

--- a/quiz.html
+++ b/quiz.html
@@ -7,25 +7,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css_files/main.css">
+  <link rel="stylesheet" type="text/css" href="css_files/quiz.css">
   <title>Quiz</title>
 </head>
 <body>
   <nav>
     <ul class="nav-bar">
       <li class="logo"><a href="index.html">ExodusCrisis</a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="quiz.html">Take The Quiz</a></li>
-      <li><a href="resources.html">Additional Resources</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="resources.html">Additional Resources</a></li>
+      <li><a href="quiz.html">Take The Quiz</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
   <div class="container">
     <section>
     <h1 id="title1">Title</h1>
     </section>
-
+<!--justify-content-center-->
     <div class="row">
       <div class="col-md">
+
           <div class="score"></div>
           <div class="content"></div>
       </div>
