--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css_files/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Open+Sans&family=Recursive&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap" rel="stylesheet">
   <title>ExodusCrisis</title>
 
 </head>
@@ -13,22 +14,27 @@
 <nav>
   <ul class="nav-bar">
     <li class="logo"><a href="index.html">ExodusCrisis</a></li>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="quiz.html">Take The Quiz</a></li>
-    <li><a href="resources.html">Additional Resources</a></li>
     <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="resources.html">Additional Resources</a></li>
+    <li><a href="quiz.html">Take The Quiz</a></li>
+    <li><a href="index.html">Home</a></li>
   </ul>
 </nav>
-<div class="container">
+<div class="container container2">
   <section>
+    <div class="row">
 
-    <h2>Mission Statement</h2>
+    <h2 class="col-sm-5 m-box mission-state">Mission Statement</h2>
 
-    <div class="msn">This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
-
-    <p class="button">
+    <div class="msn col-sm-5 m-box mission-text">This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+    <p class="button justify-content-center">
       <a class="btn btn-primary btn-lg" href="quiz.html" role="button">Take the Quiz</a>
     </p>
+    </div>
+  </div>
 
   </section>
 </div>
