--- a/resources.html
+++ b/resources.html
@@ -19,10 +19,10 @@
       </ul>
     </nav>
     <div class="container">
-    <h1>Additional Resources</h1>
     <article class="intro">
-      <h5>Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </h5>
-      <h4>Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</h4>
+      <h1>Additional Resources</h1>
+      <p class="paragraph">Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
+      <p class="paragraph">Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
     </article>
     <!--info on detention centers-->
     <article class="detention">
