--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
   <section>
     <div class="row">
 
-    <h2 class="col-sm-6 m-box mission-state">Mission Statement</h2>
+    <h2 class="col-sm-5 m-box mission-state">Mission Statement</h2>
 
-    <div class="msn col-sm-6 m-box mission-text">This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</div>
+    <div class="msn col-sm-5 m-box"> <p class="mission-text" >This is me adding in our Mission Statement. I'm not totally sure how we want to word it but I know it will be something like to help inform people on immigration. Maybe to help people realize that immigrants are important people, that they are humans like everyone else and we should not judge other humans based on their citizenship, weather they're in the US legally or illegally, and how much economic value they can bring. Also we should note that people should continue to do research and not stop here.</p>
+      <p class="button justify-content-center">
+        <a class="btn btn-primary btn-lg" href="quiz.html" role="button">Take the Quiz</a>
+      </p>
+    </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-12">
     <p class="button justify-content-center">
       <a class="btn btn-primary btn-lg" href="quiz.html" role="button">Take the Quiz</a>
     </p>
     </div>
-  </div>
+  </div> -->
 
   </section>
 </div>
