more styling updates

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
     </ul>
   </nav>
   <div class="container">
-
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/VsF9gyce" data-transparency="50" data-hide-footer=true style="width: 100%; height: 450px; margin-top: 5rem;"></div>
+    <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+     <div class="form" style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.2;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=VsF9gyce&utm_source=typeform.com-01EE89JF79V4871ZWFVB6A5FCX-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
   </div>
 </body>
 </html>
