--- a/resources.html
+++ b/resources.html
@@ -21,11 +21,12 @@
     <div class="container">
     <article class="intro">
       <h1>Additional Resources</h1>
-      <p class="paragraph">Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
-      <p class="paragraph">Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
+      <p class="paragraph top">Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
+      <p class="paragraph top">Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
     </article>
     <!--info on detention centers-->
     <article class="detention">
+
       <h3>Covid-19 in Detention Centers</h3>
       <p class="paragraph">DHS runs the largest immigration detention system in the world, unsurprisingly there’s numerous reports of unsanitary conditions, which are heightened by the Covid-19 pandemic. As of July 29th at 9:30 AM, ICE is reporting 3,917 Covid-19 cases in detention centers, out of a total detained population of 22,067. That means 17% of detainees have contracted Covid-19.
       </p>
@@ -37,7 +38,7 @@
         <ul class="dc-support">
           <li>Donate to legal counsel funds such as the <a href="https://www.nwirp.org/donate/">Northwest Immigrant Rights Project</a></li>
           <li>Donate to bond funds like the <a href="https://www.freedomforimmigrants.org/national-bond-fund">Freedom for Immigrants’ National Immigration Detention Bond Fund</a>, many times immigrants can't afford bond (similar to bail), donate to help get people out of unsanitary conditions in detention centers.</li>
-          <li><a href="https://www.ice.gov/detention-facilities">Find cetention centers near you</a> and donate supplies like masks, soap, clothing, shoes, etc.,</li>
+          <li><a href="https://www.ice.gov/detention-facilities">Find detention centers near you</a> and donate supplies like masks, soap, clothing, shoes, etc.,</li>
           <li><a href="https://www.house.gov/representatives/find-your-representative">Demand your officials</a> to get rid of privately run detention centers, abolish ice, and release those incarcerated in these centers.</li>
         </ul>
       </section>
@@ -59,9 +60,10 @@
       </p>
       <p class="paragraph">Often times undocumented indivduals are exploited and paid under the table unlivable wages. Put pressure on officials to end unethical business practices. Under the current system, undocumented workers have very little rights, never ask someone about their status as that can put them in danger. If you know of or see any ICE raids, warn your neighbors, this can mean the difference between life and death. Remember, no one has to prove their worth to be treated as a human</p>
       <p class="paragraph">Never speak for anyone. Undocumented individuals are not “voiceless” you don’t need to be the “voice of the voiceless.” They’re real people, with real feelings, and their own voices. Instead, we should uplift them and not assume what their goals are.</p>
+
       <section class="daca-update">
         <h4>DACA Update</h4>
-        <p class="paragraph">As of <b>July 28th, 2020</b> DHS is:</p>
+        <p class="paragraph" id="trying">As of <b>July 28th, 2020</b> DHS is:</p>
         <ul class="dhs-update">
           <li class="paragraph">Not accepting new DACA applications. Those who qualify but were too young to apply when the Trump Administration ended the program in 2016, are still not eligible to apply</li>
           <li class="paragraph">Shortening the deffered action period from two years to one year. This means, DACA recipients have to reapply and pay the <b>$495 fee every year</b>. </li>
