--- a/resources.html
+++ b/resources.html
@@ -23,10 +23,19 @@
       <h1>Additional Resources</h1>
       <p class="paragraph top">Thank you for taking the time to begin educating yourself on the issues surrounding immmigration in the United States. We want to make it clear that this is by no means meant to be a comprehensive resource. There are many more issues people face when it comes to immigration, and as active community members we all need to do our part to educate ourselves and help our neighbors when they need it. We also do not want to speak over immigrant voices, rather, we should all do our part to uplift and amplify them. </p>
       <p class="paragraph top">Here are a couple resources to get you started with educating yourself and becoming an active member of our community, allyship does not end at educating yourself.</p>
+   <div class ="navigation">
+    <a href="#detention">Detention Centers</a>
+    <a href="#undocumented">Undocumented Individuals</a>
+    <a href="#asylum">Asylum</a>
+    <a href="#refugee">Refugees</a>
+    <a href="#poverty">Poverty</a>
+    <a href="#indigenous">Indigenous Nations</a>
+    <a href="#organizations">Organizations</a>
+   </div>
     </article>
     <!--info on detention centers-->
     <article class="detention">
-
+      <p id="detention">
       <h3>Covid-19 in Detention Centers</h3>
       <p class="paragraph">DHS runs the largest immigration detention system in the world, unsurprisingly there’s numerous reports of unsanitary conditions, which are heightened by the Covid-19 pandemic. As of July 29th at 9:30 AM, ICE is reporting 3,917 Covid-19 cases in detention centers, out of a total detained population of 22,067. That means 17% of detainees have contracted Covid-19.
       </p>
@@ -54,16 +63,15 @@
     </article>
 
     <!--undocu info-->
+    <p id="undocumented">
     <article class="undocu-info">
       <h3>How to Support Undocumented Individuals</h3>
       <p class="paragraph">If you want to advocate for undocumented individuals, advocate for everyone! Not just those with DACA, not just those who can “contribute to the economy,” everyone is worthy and has a right to a life. A lot of undocumented people are in this country because it is difficult to make a living in their home country, no one is interested in stealing your job or resources.
       </p>
       <p class="paragraph">Often times undocumented indivduals are exploited and paid under the table unlivable wages. Put pressure on officials to end unethical business practices. Under the current system, undocumented workers have very little rights, never ask someone about their status as that can put them in danger. If you know of or see any ICE raids, warn your neighbors, this can mean the difference between life and death. Remember, no one has to prove their worth to be treated as a human</p>
       <p class="paragraph">Never speak for anyone. Undocumented individuals are not “voiceless” you don’t need to be the “voice of the voiceless.” They’re real people, with real feelings, and their own voices. Instead, we should uplift them and not assume what their goals are.</p>
-
       <section class="daca-update">
         <h4>DACA Update</h4>
-        <p class="paragraph" id="trying">As of <b>July 28th, 2020</b> DHS is:</p>
         <ul class="dhs-update">
           <li class="paragraph">Not accepting new DACA applications. Those who qualify but were too young to apply when the Trump Administration ended the program in 2016, are still not eligible to apply</li>
           <li class="paragraph">Shortening the deffered action period from two years to one year. This means, DACA recipients have to reapply and pay the <b>$495 fee every year</b>. </li>
@@ -83,6 +91,7 @@
     </article>
 
     <!--info on refugees and asylees-->
+    <p id="asylum">
     <article class="asylum-info">
       <h3>Asylees and Refugees</h3>
       <section class="asylees">
@@ -101,6 +110,7 @@
 
 
       <section class="refugee-info">
+        <p id="refugee">
         <h4>Refugees</h4>
         <p class="paragraph">There is not much of a difference between a refugee and an asylee besides legal procedures. By definition, a refugee is someone who applies for legal protection from outside the United States instead of within.</p>
         <p class="paragraph">In contrast to asylum seekers, which do not have a legal cap, the president sets the ceiling for the number of refugees admitted. In 2020 Trump lowered it to 18,000 refugees. The process can take on average from 18 to 24 months. </p>
@@ -123,6 +133,7 @@
     <!--poverty among immigrants-->
     <!--add something about medical access-->
     <article class="poverty-info">
+      <p id="poverty">
       <h3>Immigrants and the Poverty Line</h3>
       <p class="paragraph">15% of immigrants in the United States fall below the poverty threshold, in comparison to 13%. Many immigrants who come to the United States open their own businesses. One of the easiest ways to support immigrants is by purchasing from their businesses. We’ve also seen a trend during the past couple of years, where street vendors are questioned about having vendor licenses, and are sometimes attacked. If you see a street vendor being harassed do what you can to help. Don’t attempt to haggle with any small business owners/businesses, their labor is worthy of paying the full price!
       </p>
@@ -137,6 +148,7 @@
     </article>
 
     <!--indigenous people at the border-->
+    <p id="indigenous">
     <article class="desecration-info">
       <h3>How to Support Indigenous People at the Border</h3>
       <p class="paragraph">Although indigenous people are not immigrants, the crisis at the border impacts them greatly. Due to the construction of the border wall, various sacred sites of the O’odham Nation of Arizona have been desecrated. You can support the O’odham Nation by:</p>
@@ -156,6 +168,7 @@
     </article>
 
     <!--Organizations to support-->
+    <p id="organizations">
     <article class="orgs">
       <h3>Organizations to Support</h3>
       <ul class="img-orgs">
